[gd_scene load_steps=4 format=3 uid="uid://cn78rrqvdwy8u"]

[ext_resource type="Script" path="res://scripts/PauseMeniu.gd" id="1_sqhiy"]
[ext_resource type="Texture2D" uid="uid://bxkogxa7xwu72" path="res://assets/ui/dialogue_manager/text_box.png" id="2_wbm1u"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_8td4v"]
dof_blur_far_enabled = true

[node name="PauseMeniu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sqhiy")

[node name="Camera3D" type="Camera3D" parent="."]
attributes = SubResource("CameraAttributesPractical_8td4v")

[node name="MeniuHolder" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 434.0
offset_bottom = 1080.0
color = Color(0.839216, 0.447059, 0, 0.588235)

[node name="VBoxContainer" type="VBoxContainer" parent="MeniuHolder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 252.0
offset_right = -40.0
offset_bottom = -190.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureButton" type="TextureButton" parent="MeniuHolder/VBoxContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
texture_normal = ExtResource("2_wbm1u")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="MeniuHolder/VBoxContainer/TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Return to Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitGame" type="TextureButton" parent="MeniuHolder/VBoxContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
texture_normal = ExtResource("2_wbm1u")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="MeniuHolder/VBoxContainer/ExitGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Return to Main"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MeniuHolder/VBoxContainer/TextureButton" to="." method="close_pause"]
[connection signal="pressed" from="MeniuHolder/VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
